# RS-Code-SSM

./: .gitignore  DESIGN.md  PAPER.md  README.md  cli.py  env.example  pyproject.toml  requirements.txt  setup.sh
arch/: config.py  mamba2.py  model.py  moe.py  sparse_attn.py
epichat/: episteme_data  main.py
epichat/core/: __init__.py  bayesian.py  epistemic_unit.py  justifier.py  knowledge_graph.py
epichat/interface/: __init__.py  cli.py
epichat/language/: __init__.py  query_engine.py
epichat/seeding/: __init__.py  code_axioms.py  code_seeder.py  seeder_pipeline.py  web_seeder.py  wikipedia_seeder.py
finetune/: prepare_data.py  state_tune.py
notebooks/: kaggle_eus.ipynb  kaggle_traces.ipynb  kaggle_train.ipynb
scripts/: download_teacher.sh  env.sh  eval_humaneval.py  expand_epichat.py  export_model.py  gen_traces.sh  generate_eus.py  pipeline_96.sh  train_grpo.sh  train_sft_reasoning.sh  train_stage1.sh
ssm/: __init__.py  config.py  epichat_rag.py  inference_sft.py  model.py  paths.py  rag.py  test_time_compute.py
train/: dataset.py  distill.py  epichat_export.py  eval.py  grpo.py  reasoning_data.py  sft_reasoning.py  smoke_test.py  teacher.py
